--- a/rsync.delta/rsync.delta.csproj
+++ b/rsync.delta/rsync.delta.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.IO.Pipelines" Version="4.5.3" />
+    <PackageReference Include="System.IO.Pipelines" Version="4.6.0-preview4.19212.13" />
   </ItemGroup>
 
 </Project>
