--- a/rsync.delta/rsync.delta.csproj
+++ b/rsync.delta/rsync.delta.csproj
@@ -5,6 +5,7 @@
     <LangVersion>8.0</LangVersion>
     <NullableContextOptions>enable</NullableContextOptions>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <!-- <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow> -->
   </PropertyGroup>
 
   <ItemGroup>
