--- a/rsync.delta/rsync.delta.csproj
+++ b/rsync.delta/rsync.delta.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
-    <NullableContextOptions>enable</NullableContextOptions>
+    <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <!-- <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow> -->
   </PropertyGroup>
