update references, use memorypool

--- a/rsync.delta/rsync.delta.csproj
+++ b/rsync.delta/rsync.delta.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netcoreapp3.0</TargetFrameworks>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.IO.Pipelines" Version="4.6.0-preview4.19212.13" />
+    <PackageReference Include="System.IO.Pipelines" Version="4.6.0-preview7.19362.9" />
   </ItemGroup>
 
 </Project>
