--- a/rsync.delta.benchmarks/rsync.delta.benchmarks.csproj
+++ b/rsync.delta.benchmarks/rsync.delta.benchmarks.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\rsync.delta.integrationtests\rsync.delta.integrationtests.csproj" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\rsync.delta\rsync.delta.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
