start a fully vectorized avx2 impl

--- a/.editorconfig
+++ b/.editorconfig
@@ -118,6 +118,10 @@ csharp_preserve_single_line_blocks = true
 ###############################
 # VB Coding Conventions       #
 ###############################
+
+# CA1801: Parameter bytesHashedOverflows of method HashBlockAvx2_2 is never used. Remove the parameter or use it in the method body.
+dotnet_diagnostic.CA1801.severity = none
+
 [*.vb]
 # Modifier preferences
 visual_basic_preferred_modifier_order = Partial,Default,Private,Protected,Public,Friend,NotOverridable,Overridable,MustOverride,Overloads,Overrides,MustInherit,NotInheritable,Static,Shared,Shadows,ReadOnly,WriteOnly,Dim,Const,WithEvents,Widening,Narrowing,Custom,Async:suggestion
